--- a/styles/app.css
+++ b/styles/app.css
@@ -80,7 +80,7 @@ a {
   text-align: center;
   padding: 1%;
   margin-left: -10%;
-  background: #0000ed;
+  background: #00ff00;
 }
 .top-left-widget {
   position: fixed;
