--- a/styles/app/main.less
+++ b/styles/app/main.less
@@ -1,3 +1,4 @@
+@import "constants";
 @import "base";
-@import "top-center-widget";
-@import "top-left-widget";
+@import "topcenterwidget";
+@import "topleftwidget";
